--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ladiersal.githup.io/weather-app",
+  "homepage": "https://ladiersal.github.io/weather-app",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
